Fixed cover on mobile

--- a/resources/css/_m_fullpage.scss
+++ b/resources/css/_m_fullpage.scss
@@ -1,16 +1,55 @@
 div#fullpage{
     .fp-section {
-        &#steps{
-            background: /* linear-gradient(to bottom, rgba(234,170,0,0.6), rgba(234,170,0,0.6)), */ url(https://ucarecdn.com/e06286fa-87d8-49fc-b3d0-439636e6b058/-/crop/768x1067/350,0/-/scale_crop/414x736/-/progressive/yes/-/quality/lightest/) center no-repeat !important;
+        &#steps {
+            background-image: url(https://ucarecdn.com/e06286fa-87d8-49fc-b3d0-439636e6b058/-/crop/768x1067/350,0/-/scale_crop/414x736/-/progressive/yes/-/quality/lightest/);
+            background-position: center;
+            background-repeat: no-repeat;
             background-size: cover;
+            z-index: -3;
+            &::before{
+                position: absolute;
+                content: "";
+                height: 100vh;
+                width: 100vw;
+                top: 0;
+                left: 0;
+                z-index: -2;
+                background: linear-gradient(to bottom, rgba(234,170,0,0.6), rgba(234,170,0,0.6));
+            }
         }
         &#about {
-            background: /* linear-gradient(to bottom, rgba(0,47,108,0.6), rgba(0,47,108,0.6)), */ url(https://ucarecdn.com/1cd0a5a5-113d-44a8-8dd0-30a6814d4dfd/-/crop/768x1067/500,0/-/scale_crop/414x736/-/progressive/yes/-/quality/lightest/) center no-repeat !important;
+            background-image: url(https://ucarecdn.com/1cd0a5a5-113d-44a8-8dd0-30a6814d4dfd/-/crop/768x1067/500,0/-/scale_crop/414x736/-/progressive/yes/-/quality/lightest/);
+            background-position: center;
+            background-repeat: no-repeat;
             background-size: cover;
+            z-index: -3;
+            &::before{
+                position: absolute;
+                content: "";
+                height: 100vh;
+                width: 100vw;
+                top: 0;
+                left: 0;
+                z-index: -2;
+                background: linear-gradient(to bottom, rgba(0,47,108,0.6), rgba(0,47,108,0.6))
+            }
         }
         &#testimonials {
-            background: /* linear-gradient(to bottom, rgba(0,47,108,0.6), rgba(0,47,108,0.6)), */ url(https://ucarecdn.com/f7a55338-ea7b-42c8-9cd5-4bd4d29cf0b9/-/crop/768x1067/765,0/-/scale_crop/414x736/-/progressive/yes/-/quality/lightest/) center no-repeat !important;
+            background-image: url(https://ucarecdn.com/f7a55338-ea7b-42c8-9cd5-4bd4d29cf0b9/-/crop/768x1067/765,0/-/scale_crop/414x736/-/progressive/yes/-/quality/lightest/);
+            background-position: center;
+            background-repeat: no-repeat;
             background-size: cover;
+            z-index: -3;
+            &::before{
+                position: absolute;
+                content: "";
+                height: 100vh;
+                width: 100vw;
+                top: 0;
+                left: 0;
+                z-index: -2;
+                background: linear-gradient(to bottom, rgba(234,170,0,0.6), rgba(234,170,0,0.6));
+            }
         }
         .boxedIn {
             color: black;
